--- a/application/package.json
+++ b/application/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.1",
+    "bootstrap": "^4.3.1",
     "morgan": "^1.9.1"
   }
 }
