--- a/application/package.json
+++ b/application/package.json
@@ -17,6 +17,8 @@
     "express-session": "^1.16.2",
     "hbs": "^4.0.4",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "socket.io": "^2.2.0",
+    "sync-mysql": "^3.0.1"
   }
 }
